# pmvppd

./: CMakeLists.txt  GUIDialog.cpp  GUIDialog.h  README.md  gui.fbp  pmvppd.cpp  pmvppd.h  pmvppdApp.cpp  pmvppdApp.h  pmvppdMain.cpp  pmvppdMain.h
fPMVPPD/: CMakeLists.txt  CMakeSettings.json  engine_pmv_ppd.c  main.cxx  res.rc  resource.h  widget.cxx  widget.hxx
fPMVPPD/resource/: mwidget.cxx  mwidget.fd  mwidget.hxx
gPMVPPD/: CMakeLists.txt  CMakeSettings.json  main.c  res.rc  widget.c  widget.h
qtPMVPPD/: CMakeLists.txt  CMakeSettings.json  main.cpp  res.qrc  res.rc  widget.cpp  widget.hpp  widget.ui
wxPMVPPD/: CMakeLists.txt  CMakeSettings.json  engine_pmv_ppd.h  main.cpp  res.rc  widget.cpp  widget.hpp
wxPMVPPD/resource/: MWidget.fbp  mwidget.cpp  mwidget.h
